--- a/package.json
+++ b/package.json
@@ -10,13 +10,13 @@
   },
   "dependencies": {
     "co": "^4.6.0",
+    "co-busboy": "^1.3.1",
     "debug": "^2.2.0",
     "ejs": "^2.5.2",
     "koa": "^2.0.0",
-    "koa-bodyparser": "^2.0.1",
+    "koa-bodyparser": "^3.2.0",
     "koa-convert": "^1.2.0",
     "koa-json": "^1.1.1",
-    "koa-jsonp": "^2.0.2",
     "koa-logger": "^1.3.0",
     "koa-onerror": "^1.2.1",
     "koa-router": "^7.0.0",
