--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "koa": "^2.0.0",
     "koa-bodyparser": "^3.2.0",
     "koa-convert": "^1.2.0",
+    "koa-favicon": "^1.2.1",
     "koa-json": "^1.1.1",
     "koa-logger": "^1.3.0",
+    "koa-multer": "^1.0.0",
     "koa-onerror": "^1.2.1",
     "koa-router": "^7.0.0",
     "koa-static": "^2.0.0",
